final-theme-second

--- a/index.html
+++ b/index.html
@@ -66,7 +66,17 @@
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center" >
           <div>
             <h1>Start With An Idea Own Ith With FirstInc!</h1>
-            <h2>Quisque id mi. Vestibulum ante ipsum primis in faucibus orci luctus et</h2>
+            <div class="brand-carousel owl-carousel">
+              <div class="item">
+                <h2>Quisque id mi. Vestibulum ante ipsum primis in faucibus orci luctus et</h2>
+              </div>
+              <div class="item">
+                <h2> Vestibulum ante ipsum primis in faucibus orci luctus et</h2>
+              </div>
+              <div class="item">
+                <h2>Ipsum Quisque id mi. Vestibulum ante  primis in faucibus orci luctus et</h2>
+              </div>
+            </div>
             <a href="#legal" class="btn-get-started scrollto">Get Started</a>
           </div>
         </div>
