final-theme-third

--- a/about-us.html
+++ b/about-us.html
@@ -4,12 +4,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>FirstInc - Home</title>
+  <title>FirstInc - About Us</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
-
-  <!-- Favicons -->
-  <!-- <link href="" rel="icon">-->
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -38,10 +35,15 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
-          <li ><a href="">About Us</a>
+          <li><a href="index.html">Home</a></li>
+          <li class="active"><a href="">About Us</a>
           </li>
-          <li><a href="">Registration</a></li>
+          <li class="drop-down"><a href="#">Registration</a>
+            <ul>
+              <li><a href="#">Reg 1</a></li>
+              <li><a href="#">Reg 2</a></li>
+            </ul>
+          </li>
           <li><a href="">Blog</a></li>
           <li><a href="">Contact Us</a></li>
 
@@ -90,17 +92,20 @@
                 <div class="row">
                     <div class="col-12">
                         <h2 class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam similique repellat consequatur recusandae aliquid magnam cum sint libero maiores alias? Natus voluptas facere et aut ipsam beatae quibusdam quod sequi! Sed hendrerit. Proin faucibus arcu quis ante. Vivamus euismod mauris. Etiam rhoncus. Maecenas ullamcorper, dui et placerat feugiat, eros pede varius nisi, condimentum viverra felis nunc et lorem.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste temporibus minus tempore voluptatem veritatis explicabo nostrum! Delectus quis laborum fugit harum, corrupti, minima optio nihil sed eveniet quia, incidunt quos! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex eligendi, reprehenderit molestias voluptatem molestiae accusamus, temporibus eius fu</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed hendrerit. Proin faucibus arcu quis ante. Vivamus euismod mauris. Etiam rhoncus. Maecenas ullamcorper, condimentum viverra felis nunc et lorem.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste temporibus minus tempore voluptatem veritatis explicabo nostrum! sit, amet consectetur adipisicing elit. Ex eligendi, reprehenderit molestias voluptatem molestiae accusamus, temporibus eius fu</p>
                     </div>
                 </div>
             </div>
         </div>
       </div>
-    </section><!-- End Offer Section -->
+    </section>
+
+    <!-- End About Section -->
+
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
+    <section id="testimonials" class="testimonials ">
       <div class="container">
 
         <div class="section-title" >
@@ -169,6 +174,137 @@
 
       </div>
     </section><!-- End Testimonials Section -->
+
+    <!-- ======= Team Section ======= -->
+    <section id="team" class="team">
+      <div class="container">
+
+        <div class="section-title aos-init">
+          <h2>Team</h2>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-4 col-md-6">
+            <div class="member aos-init">
+              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Tony Stark</h4>
+                <span>Chief Executive Officer</span>
+                <div class="social">
+                  <a href=""><i class="icofont-twitter"></i></a>
+                  <a href=""><i class="icofont-facebook"></i></a>
+                  <a href=""><i class="icofont-instagram"></i></a>
+                  <a href=""><i class="icofont-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="member aos-init">
+              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Sarah</h4>
+                <span>Product Manager</span>
+                <div class="social">
+                  <a href=""><i class="icofont-twitter"></i></a>
+                  <a href=""><i class="icofont-facebook"></i></a>
+                  <a href=""><i class="icofont-instagram"></i></a>
+                  <a href=""><i class="icofont-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="member aos-init">
+              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>William</h4>
+                <span>CTO</span>
+                <div class="social">
+                  <a href=""><i class="icofont-twitter"></i></a>
+                  <a href=""><i class="icofont-facebook"></i></a>
+                  <a href=""><i class="icofont-instagram"></i></a>
+                  <a href=""><i class="icofont-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+    <!-- ======= End Team Section ======= -->
+
+    <!-- ======= Clients Section ======= -->
+    <section id="clients" class="clients">
+      <div class="container">
+
+        <div class="section-title aos-init aos-animate">
+          <h2>Clients</h2>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        </div>
+
+        <div class="row no-gutters clients-wrap clearfix wow fadeInUp">
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="client-logo aos-init">
+              <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="client-logo aos-init">
+              <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="client-logo aos-init">
+              <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="client-logo aos-init">
+              <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="client-logo aos-init">
+              <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="client-logo aos-init">
+              <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="client-logo aos-init">
+              <img src="assets/img/clients/client-7.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6 aos-init">
+            <div class="client-logo">
+              <img src="assets/img/clients/client-8.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+    <!-- ======= End Clients Section ======= -->
+
 
   </main><!-- End #main -->
 
