--- a/index.html
+++ b/index.html
@@ -39,9 +39,13 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li ><a href="about-us.html">About Us</a>
+          <li ><a href="about-us.html">About Us</a></li>
+          <li class="drop-down"><a href="#">Registration</a>
+            <ul>
+              <li><a href="#">Reg 1</a></li>
+              <li><a href="#">Reg 2</a></li>
+            </ul>
           </li>
-          <li><a href="">Registration</a></li>
           <li><a href="">Blog</a></li>
           <li><a href="">Contact Us</a></li>
 
@@ -198,7 +202,7 @@
     </section><!-- End Legal Section -->
 
     <!-- ======= Offer Section ======= -->
-    <section id="services" class="services section-bg">
+    <section id="services" class="services">
       <div class="container">
 
         <div class="section-title" >
