--- a/about-us.html
+++ b/about-us.html
@@ -36,7 +36,7 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li class="active"><a href="">About Us</a>
+          <li class="active"><a href="about-us.html">About Us</a>
           </li>
           <li class="drop-down"><a href="#">Registration</a>
             <ul>
@@ -44,8 +44,8 @@
               <li><a href="#">Reg 2</a></li>
             </ul>
           </li>
-          <li><a href="">Blog</a></li>
-          <li><a href="">Contact Us</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -72,18 +72,35 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
-          <img src="assets/img/about_frame.png" class="img-fluid" alt="">
+          <img src="assets/img/about.svg" class="img-fluid" alt="">
         </div>
       </div>
     </div>
 
-  </section><!-- End Hero -->
+  </section>
+  <!-- <section class="page-title bg-1">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="block text-center">
+            <span class="text-white">News details</span>
+            <h1 class="text-capitalize my-3 text-lg text-white">About Us</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section> -->
+  <!-- End Hero -->
 
   <main id="main">
 
     <!-- ======= About Section ======= -->
-    <section class="section-bg">
-      <div class="container">
+    <section class="section-bg position-relative">
+      <div>
+        <img src="./assets/img/decoration-star.svg" class="decoration-star">
+      </div>
+      <div class="container ">
         <div class="row">
             <div class="col-lg-6">
                 <img src="./assets/img/about-left-image.png" class="img-fluid">
@@ -326,10 +343,10 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="about-us.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Registration</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Blog</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="blog.html">Blog</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Contact Us</a></li>
             </ul>
           </div>
