--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/vendor/iziModal/iziModal.css" />
 
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -39,15 +40,20 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li ><a href="about-us.html">About Us</a></li>
+          <li><a href="about-us.html">About Us</a></li>
           <li class="drop-down"><a href="#">Registration</a>
             <ul>
               <li><a href="#">Reg 1</a></li>
               <li><a href="#">Reg 2</a></li>
             </ul>
           </li>
-          <li><a href="">Blog</a></li>
-          <li><a href="">Contact Us</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
+          <li class="user-action">
+            <a class="pointer trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown"><i class='bx bxs-user-circle'></i></a>
+            <a href="" class="d-none">Dashboard</a>
+          </li>
+          <!-- <li><a href="">Dashboard</a></li> -->
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -354,10 +360,10 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="about-us.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Registration</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Blog</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="blog.html">Blog</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Contact Us</a></li>
             </ul>
           </div>
@@ -403,12 +409,67 @@
 
   <a href="#" class="back-to-top"><i class="bx bxs-up-arrow-alt"></i></a>
 
+<!--Login Modals -->
+<div id="modal-custom" data-iziModal-group="grupo1">
+  <button data-iziModal-close class="icon-close">x</button>
+  <header>
+      <a href="" class="active" id="signin">Sign in</a>
+      <a href="" >New Account</a>
+  </header>
+  <section class="hide">
+      <input type="text" placeholder="Username">
+      <input type="password" placeholder="Password">
+      <footer>
+          <button data-iziModal-close>Cancel</button>
+          <button class="submit">Log in</button>            
+      </footer>
+  </section>
+  <section>
+      <input type="text" placeholder="Email">
+      <input type="password" placeholder="Password">
+      <label for="check"><input type="checkbox" name="checkbox" id="check" value="1"> I agree to the <u>Terms</u>.</label>
+      <footer>
+          <button data-iziModal-close>Cancel</button>
+          <button class="submit">Create Account</button>            
+      </footer>
+  </section>
+</div>
+<!--Business Registration Modals -->
+<div id="modal2" data-iziModal-title="Login To FirstInc"  data-iziModal-icon="icon-home"> <!-- data-iziModal-fullscreen="true"  data-iziModal-title="Welcome"  data-iziModal-subtitle="Subtitle"  data-iziModal-icon="icon-home" -->
+  <div class="login__form container mt-3 mb-2">
+    <div class="row">
+      <div class="col-12">
+        <form action="" method="post" role="form" class="php-email-form">
+          <div class="form-row">
+            <div class="form-group col-lg-8 col-12 mx-auto">
+              <label for="name">Your Email</label>
+              <input type="email" class="form-control" name="email" id="email" data-rule="email" data-msg="Please enter a valid email" >
+              <div class="validate text-danger"></div>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-lg-8 col-12 mx-auto">
+              <label for="name">Password</label>
+              <input type="password" class="form-control" name="password" id="password" data-rule="required" data-msg="Please enter your password" >
+              <div class="validate text-danger"></div>
+            </div>
+          </div>
+          <div class="text-center"><button class="theme-button border-0" type="submit">Send Message</button></div>
+        </form>
+      </div>
+    </div>
+    </div>
+  </div>
+</div>
+
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
   <script src="assets/vendor/venobox/venobox.min.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/iziModal/iziModal.js"></script>
 
   <!--  Main JS File -->
   <script src="assets/js/main.js"></script>
