--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/vendor/iziModal/iziModal.css" />
+  <link rel="stylesheet" href="assets/vendor/jquery-nice-select-1.1.0/css/nice-select.css" />
 
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -168,34 +169,54 @@
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mb-3">
 
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
+          <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box">
-              <h3>Business Registration</h3>
-              <h4><sup>$</sup>890</h4>
-              <ul>
-                <li>Donec interdum metus et</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-              </ul>
+              <i class="icofont-company"></i>
+              <h3>Sole Proprietorship</br></h3>
+              <h6>(One owner only)</h6>
+              <!-- <h4><sup>$</sup>890</h4> -->
+              <div class="mb-4">
+                <select class="py-1 px-2">
+                  <option >Select Province</option>
+                  <option value="Ontario">Ontario</option>
+                </select>
+              </div>
+              <div>
+                <ul>
+                  <li>Donec interdum metus et</li>
+                  <li>Nec feugiat nisl</li>
+                  <li>Nulla at volutpat dola</li>
+                  <li>Pharetra massa</li>
+                </ul>
+              </div>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Apply Now</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
+          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box">
-              <h3>Incorporation</h3>
-              <h4><sup>$</sup>890</h4>
-              <ul>
-                <li>Donec interdum metus et</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-              </ul>
+              <i class="icofont-handshake-deal"></i>
+              <h3>General Partnership</h3>
+              <h6>(More than one owner)</h6>
+              <!-- <h4><sup>$</sup>890</h4> -->
+              <div class="mb-4">
+                <select class="py-1 px-2">
+                  <option >Select Province</option>
+                  <option value="Ontario">Ontario</option>
+                </select>
+              </div>
+              <div>
+                <ul>
+                  <li>Donec interdum metus et</li>
+                  <li>Nec feugiat nisl</li>
+                  <li>Nulla at volutpat dola</li>
+                  <li>Pharetra massa</li>
+                </ul>
+              </div>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Apply Now</a>
               </div>
@@ -203,6 +224,87 @@
           </div>
 
         </div>
+
+        <div class="row justify-content-center">
+          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+            <div class="box">
+              <i class="icofont-certificate-alt-1"></i>
+              <h3>Nuans</h3>
+              <h6></h6>
+              <!-- <h4><sup>$</sup>890</h4> -->
+              <div class="mb-4">
+                <select class="py-1 px-2">
+                  <option >Select Province</option>
+                  <option value="Ontario">Ontario</option>
+                </select>
+              </div>
+              <div>
+                <ul>
+                  <li>Donec interdum metus et</li>
+                  <li>Nec feugiat nisl</li>
+                  <li>Nulla at volutpat dola</li>
+                  <li>Pharetra massa</li>
+                </ul>
+              </div>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Apply Now</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+            <div class="box">
+              <i class="icofont-ebook"></i>
+              <h3>Trade Name</h3>
+              <h6></h6>
+              <!-- <h4><sup>$</sup>890</h4> -->
+              <div class="mb-4">
+                <select class="py-1 px-2">
+                  <option >Select Province</option>
+                  <option value="Ontario">Ontario</option>
+                </select>
+              </div>
+              <div>
+                <ul>
+                  <li>Donec interdum metus et</li>
+                  <li>Nec feugiat nisl</li>
+                  <li>Nulla at volutpat dola</li>
+                  <li>Pharetra massa</li>
+                </ul>
+              </div>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Apply Now</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+            <div class="box">
+              <i class="icofont-layers"></i>
+              <h3>Incorporation</h3>
+              <h6></h6>
+              <!-- <h4><sup>$</sup>890</h4> -->
+              <div class="mb-4">
+                <select class="py-1 px-2">
+                  <option >Select Province</option>
+                  <option value="Ontario">Ontario</option>
+                </select>
+              </div>
+              <div>
+                <ul>
+                  <li>Donec interdum metus et</li>
+                  <li>Nec feugiat nisl</li>
+                  <li>Nulla at volutpat dola</li>
+                  <li>Pharetra massa</li>
+                </ul>
+              </div>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Apply Now</a>
+              </div>
+            </div>
+          </div>
+
+          </div>
 
       </div>
     </section><!-- End Legal Section -->
@@ -474,37 +576,13 @@
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/iziModal/iziModal.js"></script>
+  <script src="assets/vendor/jquery-nice-select-1.1.0/js/jquery.nice-select.min.js"></script>
+  <script src="assets/vendor/jquery-nice-select-1.1.0/js/fastclick.js"></script>
+  <script src="assets/vendor/jquery-nice-select-1.1.0/js/prism.js"></script>
 
   <!--  Main JS File -->
   <script src="assets/js/main.js"></script>
-<!--   <script>
-    // disable right click
-    document.addEventListener('contextmenu', event => event.preventDefault());
- 
-    document.onkeydown = function (e) {
- 
-        // disable F12 key
-        if(e.keyCode == 123) {
-            return false;
-        }
- 
-        // disable I key
-        if(e.ctrlKey && e.shiftKey && e.keyCode == 73){
-            return false;
-        }
- 
-        // disable J key
-        if(e.ctrlKey && e.shiftKey && e.keyCode == 74) {
-            return false;
-        }
- 
-        // disable U key
-        if(e.ctrlKey && e.keyCode == 85) {
-            return false;
-        }
-    }
- 
-</script> -->
+
 </body>
 
 </html>
