--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li><a href="about-us.html">About Us</a></li>
           <li class="drop-down"><a href="#">Registration</a>
             <ul>
-              <li><a href="#">Reg 1</a></li>
+              <li><a href="registration.html">Reg 1</a></li>
               <li><a href="#">Reg 2</a></li>
             </ul>
           </li>
