--- a/registration.html
+++ b/registration.html
@@ -36,11 +36,11 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li class="active"><a href="about-us.html">About Us</a>
+          <li><a href="about-us.html">About Us</a>
           </li>
           <li class="drop-down"><a href="#">Registration</a>
             <ul>
-              <li><a href="#">Reg 1</a></li>
+              <li class="active"><a href="#">Reg 1</a></li>
               <li><a href="#">Reg 2</a></li>
             </ul>
           </li>
