--- a/index.html
+++ b/index.html
@@ -42,12 +42,7 @@
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="about-us.html">About Us</a></li>
-          <li class="drop-down"><a href="#">Registration</a>
-            <ul>
-              <li><a href="registration.html">Reg 1</a></li>
-              <li><a href="#">Reg 2</a></li>
-            </ul>
-          </li>
+          <li><a href="registration.html">Registration</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact-us.html">Contact Us</a></li>
           <li class="user-action">
@@ -171,7 +166,7 @@
 
         <div class="row justify-content-center mb-3">
 
-          <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
+          <div class="col-lg-4 col-md-6">
             <div class="box">
               <i class="icofont-company"></i>
               <h3>Sole Proprietorship</br></h3>
@@ -192,12 +187,12 @@
                 </ul>
               </div>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Apply Now</a>
+                <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Get Started</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+          <div class="col-lg-4 col-md-6 ">
             <div class="box">
               <i class="icofont-handshake-deal"></i>
               <h3>General Partnership</h3>
@@ -218,7 +213,7 @@
                 </ul>
               </div>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Apply Now</a>
+                <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Get Started</a>
               </div>
             </div>
           </div>
@@ -226,7 +221,7 @@
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+          <div class="col-lg-4 col-md-6">
             <div class="box">
               <i class="icofont-certificate-alt-1"></i>
               <h3>Nuans</h3>
@@ -247,12 +242,12 @@
                 </ul>
               </div>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Apply Now</a>
+                <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Get Started</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+          <div class="col-lg-4 col-md-6 ">
             <div class="box">
               <i class="icofont-ebook"></i>
               <h3>Trade Name</h3>
@@ -273,12 +268,12 @@
                 </ul>
               </div>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Apply Now</a>
+                <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Get Started</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+          <div class="col-lg-4 col-md-6 ">
             <div class="box">
               <i class="icofont-layers"></i>
               <h3>Incorporation</h3>
@@ -299,7 +294,7 @@
                 </ul>
               </div>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Apply Now</a>
+                <a href="#" class="btn-buy trigger" data-izimodal-open="#modal-custom" data-izimodal-transitionin="fadeInDown">Get Started</a>
               </div>
             </div>
           </div>
