--- a/blog.html
+++ b/blog.html
@@ -28,12 +28,7 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li class="active"><a href="about-us.html">About Us</a> </li>
-					<li class="drop-down"><a href="#">Registration</a>
-						<ul>
-							<li><a href="#">Reg 1</a></li>
-							<li><a href="#">Reg 2</a></li>
-						</ul>
-					</li>
+					<li><a href="registration.html">Registration</a></li>
 					<li><a href="blog.html">Blog</a></li>
 					<li><a href="contact-us.html">Contact Us</a></li>
 				</ul>
